--- a/TOC/giga/summer_19_01/index.html
+++ b/TOC/giga/summer_19_01/index.html
@@ -35,7 +35,7 @@
     </button>
     <div class="dropdown-content" id="myDropdown1">
       <a href="/">Home</a>
-      <a href="#">Weekly Shonen Jump Hub</a>
+      <a href="/TOC">Weekly Shonen Jump Hub</a>
       <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
       <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
       <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
@@ -46,7 +46,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content" id="myDropdown2">
-      <a href="giga">GIGA</a>
+      <a href="/TOC/giga">GIGA</a>
     </div>
   </div> 	
   <div id="nav-center">
