--- a/TOC/giga/summer_19_01/esp.html
+++ b/TOC/giga/summer_19_01/esp.html
@@ -45,7 +45,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content" id="myDropdown2">
-      <a href="giga">GIGA/esp</a>
+      <a href="/TOC/giga/esp">GIGA</a>
     </div>
   </div> 	
   <div id="nav-center">
