--- a/TOC/19_34/index.html
+++ b/TOC/19_34/index.html
@@ -1,21 +1,80 @@
-
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-142193139-1');
+</script>
+	  <link rel="shortcut icon"
+   type="image/x-icon"
+        href="https://manganimy.github.io/TOC/img/fav.ico">
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta name="description" content="Table of contents">
-<meta name="Keywords" content="Table of contents">
+<meta property="og:title" content="Weekly Shonen Jump #34 2019">	
+<meta property="og:description" content="Table of contents &amp; Author Comments">
+<meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump">
+<meta property="og:image" content="https://manganimy.github.io/TOC/19_34/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_34">
+<meta name="twitter:card" content="summary_large_image">
+
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+<div class="navbar">
+<div class="fit">
+  
+  <div class="dropdown">
+    <button class="dropbtn">Menu 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="/">Home</a>
+      <a href="/TOC">Weekly Shonen Jump Hub</a>
+      <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
+      <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
+      <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
+    </div>
+  </div> 
+ <div class="dropdown">
+    <button class="dropbtn">SP 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="/TOC/giga">GIGA</a>
+    </div>
+  </div>
+  <div id="nav-center">
+	  <a href="https://manganimy.github.io/TOC/19_33/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><button class="dropbtn">#33</button></a>
+ 	  <a href="#"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
+  </div>
+  <div class="lang">
+  <div class="dropdown">
+    <button class="dropbtn">eng 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="esp">esp</a>
+    </div>	  
+     </div>
+  </div> 
+</div>
+</div>	<!-- end navbar -->
 <div id="container">
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
-		<div class="img_wj"><img src="img/img_wj.jpg" alt=""></div>
+<div id="grid-container">
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_33/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
+  <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
+  <div class="grid-item"><div class="img_nav"><a href="#"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
+</div>
 	</div><!-- end .header -->
 
 	<div class="contents">
@@ -263,6 +322,16 @@
   ga('send', 'pageview');
 
 </script>
-
+<script>
+window.onscroll = function() {scrollFunction()};
+var postion = document.getElementById("grid-container");
+function scrollFunction() {
+  if (document.body.scrollTop > postion.offsetTop + postion.offsetTop/2 ) {
+    document.getElementById("nav-center").style.top = "50%";
+  } else {
+    document.getElementById("nav-center").style.top = "-50px";
+  }
+}
+</script>
 </body>
 </html>
