--- a/TOC/index.html
+++ b/TOC/index.html
@@ -158,7 +158,35 @@
 <h2><a href="19_34/" style="display:block; width:100%">Weekly Shonen Jump #34 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_34/">
   <img src="img/19_34.jpg">
-</a> 		  
+</a>
+<h2><a href="19_34/" style="display:block; width:100%">Weekly Shonen Jump #34 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_34/">
+  <img src="img/19_34.jpg">
+</a> 	
+<h2><a href="19_35/" style="display:block; width:100%">Weekly Shonen Jump #35 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_35/">
+  <img src="img/19_35.jpg">
+</a> 	
+<h2><a href="19_3637/" style="display:block; width:100%">Weekly Shonen Jump #36・37 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_3637/">
+  <img src="img/19_3637.jpg">
+</a> 	
+<h2><a href="19_38/" style="display:block; width:100%">Weekly Shonen Jump #38 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_38/">
+  <img src="img/19_38.jpg">
+</a> 	
+<h2><a href="19_39/" style="display:block; width:100%">Weekly Shonen Jump #39 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_39/">
+  <img src="img/19_39.jpg">
+</a> 	
+<h2><a href="19_40/" style="display:block; width:100%">Weekly Shonen Jump #40 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_40/">
+  <img src="img/19_40.jpg">
+</a>
+<h2><a href="19_41/" style="display:block; width:100%">Weekly Shonen Jump #41 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_34/">
+  <img src="img/19_41.jpg">
+</a>  	 		  
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
