--- a/TOC/19_3637/index.html
+++ b/TOC/19_3637/index.html
@@ -14,11 +14,11 @@
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump #35 2019">	
+<meta property="og:title" content="Weekly Shonen Jump #36・37 2019">	
 <meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump">
-<meta property="og:image" content="https://manganimy.github.io/TOC/19_35/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/19_35">
+<meta property="og:image" content="https://manganimy.github.io/TOC/19_3637/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_3637">
 <meta name="twitter:card" content="summary_large_image">
 
 <link rel="stylesheet" href="css/reset.css">
@@ -50,9 +50,9 @@
     </div>
   </div>
   <div id="nav-center">
-	  <a href="https://manganimy.github.io/TOC/19_34/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
-	  <a><button class="dropbtn">#35</button></a>
- 	  <a href="#"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
+	  <a href="https://manganimy.github.io/TOC/19_35/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><button class="dropbtn">#36・37</button></a>
+ 	  <a href="https://manganimy.github.io/TOC/19_38"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
   <div class="lang">
   <div class="dropdown">
@@ -71,9 +71,9 @@
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
 <div id="grid-container">
-  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_34/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_35/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
   <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
-  <div class="grid-item"><div class="img_nav"><a href="#"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_38"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
 </div>
 	</div><!-- end .header -->
 
