--- a/TOC/index.html
+++ b/TOC/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
@@ -219,3 +220,4 @@ window.onclick = function(e) {
 
 </script>	
 </body>
+</html>
