--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -15,12 +15,12 @@
         href="img/fav.ico">
 <title>Weekly Shonen Jump TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Jump Author Comments (with proper formatting)">
+<meta property="og:title" content="Weekly Shonen Jump Oricon">
+<meta property="og:description" content="Archive of Shonen Jump Oriocon data">
 <meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/">
+<meta property="og:url" content="https://manganimy.github.io/TOC/oricon">
 <meta name="twitter:card" content="summary_large_image">	
-<link rel="stylesheet" type="text/css" href="wsjhub.css">
+<link rel="stylesheet" type="text/css" href="oricon.css">
 </head>
 <body>
 <div class="navbar">
@@ -31,7 +31,7 @@
     </button>
     <div class="dropdown-content" id="myDropdown1">
       <a href="/">Home</a>
-      <a href="#">Weekly Shonen Jump Hub</a>
+      <a href="/TOC">Weekly Shonen Jump Hub</a>
       <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
       <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
       <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
@@ -42,7 +42,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content" id="myDropdown2">
-      <a href="giga">GIGA</a>
+      <a href="/TOC/giga">GIGA</a>
     </div>
   </div> 	
   <div class="lang">
@@ -51,7 +51,7 @@
       <i class="fa fa-caret-down"></i>
 	    </button>
     <div class="dropdown-content"id="myDropdown3" >
-      <a href="esp">esp</a>
+      <a href="#">esp</a>
     </div>
     </div>
   </div> 
@@ -60,7 +60,7 @@
 <div style="margin: 0 8px">	
   <div class="header">
 <img src="img/logo.svg" style="width:70%" class="center">
-<h1>Weekly Shonen Jump Table of Contents & Author Comments</h1>
+<h1>Weekly Shonen Jump Oricon Data (en)</h1>
 	</div>
 	  <div class="content">
   
