--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -12,7 +12,7 @@
 
 	  <link rel="shortcut icon"
    type="image/x-icon"
-        href="img/fav.ico">
+        href="/TOC/img/fav.ico">
 <title>Weekly Shonen Jump TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump Oricon">
@@ -57,9 +57,9 @@
   </div> 
 </div>
 </div>	<!-- end navbar -->
+
 <div style="margin: 0 8px">	
-  <div class="header">
-<img src="img/logo.svg" style="width:70%" class="center">
+
 <h1>Weekly Shonen Jump Oricon Data (en)</h1>
 	</div>
 	  <div class="content">
@@ -68,6 +68,7 @@
 </div> <!-- end margin -->
 
 <script>
+	
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
 function myFunction(a) {
