--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -58,7 +58,7 @@
 </div>
 </div>	<!-- end navbar -->
 
-<div style="margin: 0 8px">	
+<div style="margin: 70px 8px 0">	
 
 <h1>Weekly Shonen Jump Oricon Data (en)</h1>
 	</div>
@@ -77,9 +77,12 @@
 10|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|DS 11
 11|**29611(3)|**55608|**65124|*******|*******┃*,*65,124(*17)┃2019/08/02|Yuuna 17
 12|**25075(3)|**50952|**61532|*******|*******┃*,*61,532(*17)┃2019/08/02|CSM 3
-
--
-
+</span>
+<p>
+	-
+	
+</p>
+<span>
 *1|*260748(5)|*******|*******|*******|*******┃*,260,748(**5)┃2019/09/04|HQ 39
 *2|**70467(5)|*******|*******|*******|*******┃*,*70,467(**5)┃2019/09/04|WNL 13
 *3|**68740(5)|*******|*******|*******|*******┃*,*68,740(**5)┃2019/09/04|DS 12
