--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -63,6 +63,9 @@
 <h1>Weekly Shonen Jump Oricon Data (en)</h1>
 	</div>
 	  <div class="content">
+      
+<strong> Latest  Volumes data </strong>
+<p></p>
 <span>
 **| Week 1(F)|Week 2 |Week 3 |Week 4 |Week 5 ┃OriconLTD(DIP)┃Pub. Date |Title
 *1|1378177(4)|1716100|1855702|1923919|1966556┃2,094,389(*67)┃2019/07/04|OP 93
@@ -80,7 +83,6 @@
 </span>
 <p>
 	-
-	
 </p>
 <span>
 *1|*260748(5)|*******|*******|*******|*******┃*,260,748(**5)┃2019/09/04|HQ 39
@@ -90,7 +92,8 @@
 </span>
   </div><!-- end content -->	
 </div> <!-- end margin -->
-
+	
+	
 <script>
 	
 /* When the user clicks on the button, 
