--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -16,7 +16,7 @@
 <title>Weekly Shonen Jump TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump Oricon">
-<meta property="og:description" content="Archive of Shonen Jump Oriocon data">
+<meta property="og:description" content="Archive of Shonen Jump Oricon data">
 <meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
 <meta property="og:url" content="https://manganimy.github.io/TOC/oricon">
 <meta name="twitter:card" content="summary_large_image">	
