--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -68,27 +68,27 @@
 <p></p>
 <span>
 **| Week 1(F) | Week 2 | Week 3 | Week 4 | Week 5 ┃OriconLTD (DIP)┃ Pub. Date |Title
-*1|1378177(4)|1716100|1855702|1923919|1966556┃2,094,389(*67)┃2019/07/04|OP 93
-*2|*190803(3)|*399399|*497864|*544803|*570463┃*,585,845(*38)┃2019/08/02|TPN 15
-*3|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|MHA 24
-*4|*325332(6)|*418233|*461080|*485385|*498294┃*,537,297(*76)┃2019/06/04|HQ 38
-*5|*225102(4)|*302423|*337978|*357346|*384400┃*,471,605(*67)┃2019/07/04|KnY 16
-*6|*120146(4)|*173597|*195982|*206343|*213502┃*,224,981(*46)┃2019/07/04|BC 21
-*7|**98500(4)|*136161|*152250|*162156|*169575┃*,181,712(*46)┃2019/07/04|JJK 6
-*8|**76366(6)|**99474|*110940|*117998|*******┃*,117,998(*27)┃2019/06/04|WNL 12
-*9|**61834(4)|**89891|*102933|*******|*117666┃*,117,666(*32)┃2019/07/04|AA 7
-10|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|DS 11
-11|**29611(3)|**55608|**65124|*******|*******┃*,*65,124(*17)┃2019/08/02|Yuuna 17
-12|**25075(3)|**50952|**61532|*******|*******┃*,*61,532(*17)┃2019/08/02|CSM 3
+*1|1378177(4)|1716100|1855702|1923919|1966556┃2,094,389(*67)┃2019/07/04|One Piece 93
+*2|*190803(3)|*399399|*497864|*544803|*570463┃*,585,845(*38)┃2019/08/02|The Promised Neverland 15
+*3|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My Hero Academia 24
+*4|*325332(6)|*418233|*461080|*485385|*498294┃*,537,297(*76)┃2019/06/04|Haikyuu!! 38
+*5|*225102(4)|*302423|*337978|*357346|*384400┃*,471,605(*67)┃2019/07/04|Kimetesu no Yaiba 16
+*6|*120146(4)|*173597|*195982|*206343|*213502┃*,224,981(*46)┃2019/07/04|Black Clover 21
+*7|**98500(4)|*136161|*152250|*162156|*169575┃*,181,712(*46)┃2019/07/04|Jujutsu Kaisen 6
+*8|**76366(6)|**99474|*110940|*117998|*******┃*,117,998(*27)┃2019/06/04|We Never Learn 12
+*9|**61834(4)|**89891|*102933|*******|*117666┃*,117,666(*32)┃2019/07/04|Act-Age 7
+10|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|Dr. Stone 11
+11|**29611(3)|**55608|**65124|*******|*******┃*,*65,124(*17)┃2019/08/02|Yuragi-sou no Yuuna-san   17
+12|**25075(3)|**50952|**61532|*******|*******┃*,*61,532(*17)┃2019/08/02|Chainsaw Man 3
 </span>
 <p>
 	-
 </p>
 <span>
-*1|*260748(5)|*******|*******|*******|*******┃*,260,748(**5)┃2019/09/04|HQ 39
-*2|**70467(5)|*******|*******|*******|*******┃*,*70,467(**5)┃2019/09/04|WNL 13
-*3|**68740(5)|*******|*******|*******|*******┃*,*68,740(**5)┃2019/09/04|DS 12
-*4|**66245(5)|*******|*******|*******|*******┃*,*66,245(**5)┃2019/09/04|AA 8	
+*1|*260748(5)|*******|*******|*******|*******┃*,260,748(**5)┃2019/09/04|Haikyuu!! 39
+*2|**70467(5)|*******|*******|*******|*******┃*,*70,467(**5)┃2019/09/04|We Never Learn 13
+*3|**68740(5)|*******|*******|*******|*******┃*,*68,740(**5)┃2019/09/04|Dr. Stone 12
+*4|**66245(5)|*******|*******|*******|*******┃*,*66,245(**5)┃2019/09/04|Act-Age 8	
 </span>
   </div><!-- end content -->	
 </div> <!-- end margin -->
