--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -14,7 +14,6 @@
    type="image/x-icon"
         href="/TOC/img/fav.ico">
 <title>Weekly Shonen Jump TOC Hub</title>
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump Oricon">
 <meta property="og:description" content="Archive of Shonen Jump Oricon data">
 <meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
@@ -60,7 +59,7 @@
 
 <div style="margin: 70px 8px 0">	
 
-<h1>Weekly Shonen Jump Oricon Data (en)</h1>
+<h1>Weekly Shonen Jump Oricon Data</h1>
 	</div>
 	  <div class="content">
       
