--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -14,6 +14,7 @@
    type="image/x-icon"
         href="/TOC/img/fav.ico">
 <title>Weekly Shonen Jump TOC Hub</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">
 <meta property="og:title" content="Weekly Shonen Jump Oricon">
 <meta property="og:description" content="Archive of Shonen Jump Oricon data">
 <meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
@@ -56,7 +57,7 @@
   </div> 
 </div>
 </div>	<!-- end navbar -->
-
+<div style="min-width: 1080px; margin: 0 auto;">
 <div style="margin: 70px 8px 0">	
 
 <h1>Weekly Shonen Jump Oricon Data</h1>
@@ -91,6 +92,7 @@
 </span>
   </div><!-- end content -->	
 </div> <!-- end margin -->
+</div> <!-- end size -->
 	
 	
 <script>
