--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -57,7 +57,7 @@
   </div> 
 </div>
 </div>	<!-- end navbar -->
-<div style="min-width: 1080px; margin: 0 auto;">
+<div style="min-width: 1080px; margin: 0 auto; font-family: monospace">
 <div style="margin: 70px 8px 0">	
 
 <h1>Weekly Shonen Jump Oricon Data</h1>
@@ -67,7 +67,7 @@
 <strong> Latest  Volumes data </strong>
 <p></p>
 <span>
-**| Week 1(F) | Week 2 | Week 3 | Week 4 | Week 5 ┃OriconLTD (DIP)┃ Pub. Date |Title
+**| Week 1(F)| Week 2| Week 3| Week 4| Week 5┃OriconLTD(DIP)┃Pub. Date |Title
 *1|1378177(4)|1716100|1855702|1923919|1966556┃2,094,389(*67)┃2019/07/04|One Piece 93
 *2|*190803(3)|*399399|*497864|*544803|*570463┃*,585,845(*38)┃2019/08/02|The Promised Neverland 15
 *3|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My Hero Academia 24
@@ -92,7 +92,8 @@
 </span>
   </div><!-- end content -->	
 </div> <!-- end margin -->
-</div> <!-- end size -->
+</div> <!-- end size & font -->
+	
 	
 	
 <script>
