--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -57,7 +57,7 @@
   </div> 
 </div>
 </div>	<!-- end navbar -->
-<div style="min-width: 1080px; margin: 0 auto; font-family: Courier, monospace">
+<div style="min-width: 1080px; margin: 0 auto; font-family: CourierNew, monospace">
 <div style="margin: 55px 8px 0">	
 
 <h1>Weekly Shonen Jump Oricon Data</h1>
