--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -88,6 +88,7 @@
 <strong> Current Volumes Data (September 2019)</strong>
 <p></p>		  
 <span>
+**|Week 1 (F)|Week 2 |Week 3 |Week 4 |Week 5 ┃OriconLTD(DIP)┃Pub. Date |Title	
 *1|*260748(5)|*******|*******|*******|*******┃*,260,748(**5)┃2019/09/04|Haikyuu!! 39
 *2|**70467(5)|*******|*******|*******|*******┃*,*70,467(**5)┃2019/09/04|We Never Learn 13
 *3|**68740(5)|*******|*******|*******|*******┃*,*68,740(**5)┃2019/09/04|Dr. Stone 12
