--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -47,7 +47,7 @@
   </div> 	
   <div class="lang">
   <div class="dropdown" >
-	  <button class="dropbtn" onclick="myFunction(this)" style="min-width:230px">Quick Nav
+	  <button class="dropbtn" onclick="myFunction(this)" style="min-width:230px">Quick Navigation
       <i class="fa fa-caret-down"></i>
 	    </button>
     <div class="dropdown-content"id="myDropdown3" >
