--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -77,14 +77,14 @@
 *2|*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
 *3|*190803(3)|*399399|*497864|*544803|*570463┃*,585,845(*38)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
 *4|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
-*5|*325332(6)|*418233|*461080|*485385|*498294┃*,537,297(*76)┃2019/06/04|Haikyuu!!&nbsp;38
+*5|*325332(6)|*418233|*461080|*485385|*498294┃*,537,297(*76)┃2019/06/04|Haikyuu&#33;&#33;&nbsp;38
 *6|*225102(4)|*302423|*337978|*357346|*384400┃*,471,605(*67)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
 *7|*120146(4)|*173597|*195982|*206343|*213502┃*,224,981(*46)┃2019/07/04|Black&nbsp;Clover&nbsp;21
 *8|**98500(4)|*136161|*152250|*162156|*169575┃*,181,712(*46)┃2019/07/04|Jujutsu&nbsp;Kaisen&nbsp;6
 *9|**76366(6)|**99474|*110940|*117998|*******┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
-10|**61834(4)|**89891|*102933|*******|*117666┃*,117,666(*32)┃2019/07/04|Act-Age&nbsp;7
-11|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|Dr.&nbsp;Stone&nbsp;11
-12|**29611(3)|**55608|**65124|*******|*******┃*,*65,124(*17)┃2019/08/02|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;&nbsp;&nbsp;17
+10|**61834(4)|**89891|*102933|*******|*117666┃*,117,666(*32)┃2019/07/04|Act&#45;Age&nbsp;7
+11|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|Dr&#46;&nbsp;Stone&nbsp;11
+12|**29611(3)|**55608|**65124|*******|*******┃*,*65,124(*17)┃2019/08/02|Yuragi&#45;sou&nbsp;no&nbsp;Yuuna&#45;san&nbsp;&nbsp;&nbsp;17
 13|**25075(3)|**50952|**61532|*******|*******┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
 </span>
 <p>
@@ -94,10 +94,10 @@
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-*1|*260748(5)|*******|*******|*******|*******┃*,260,748(**5)┃2019/09/04|Haikyuu!!&nbsp;39
+*1|*260748(5)|*******|*******|*******|*******┃*,260,748(**5)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
 *2|**70467(5)|*******|*******|*******|*******┃*,*70,467(**5)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
-*3|**68740(5)|*******|*******|*******|*******┃*,*68,740(**5)┃2019/09/04|Dr.&nbsp;Stone&nbsp;12
-*4|**66245(5)|*******|*******|*******|*******┃*,*66,245(**5)┃2019/09/04|Act-Age&nbsp;8	
+*3|**68740(5)|*******|*******|*******|*******┃*,*68,740(**5)┃2019/09/04|Dr&#46;&nbsp;Stone&nbsp;12
+*4|**66245(5)|*******|*******|*******|*******┃*,*66,245(**5)┃2019/09/04|Act&#45;Age&nbsp;8	
 </span>
 <br>
 <br>
