--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -51,10 +51,10 @@
       <i class="fa fa-caret-down"></i>
 	    </button>
     <div class="dropdown-content"id="myDropdown3" >
-      <a href="#latest" >>> Latest Volume Data</a>
+      <a href="#latest" >&gt;&gt; Latest Volume Data</a>
       <p> Ongoing series </p>
-      <a href="#op" >>> One Piece</a>
-      <a href="#hxh" >>> Hunter x Hunter</a>
+      <a href="#op" >&gt;&gt; One Piece</a>
+      <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
     </div>
     </div>
   </div> 
@@ -82,9 +82,9 @@
 *7|*120146(4)|*173597|*195982|*206343|*213502┃*,224,981(*46)┃2019/07/04|Black&nbsp;Clover&nbsp;21
 *8|**98500(4)|*136161|*152250|*162156|*169575┃*,181,712(*46)┃2019/07/04|Jujutsu&nbsp;Kaisen&nbsp;6
 *9|**76366(6)|**99474|*110940|*117998|*******┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
-10|**61834(4)|**89891|*102933|*******|*117666┃*,117,666(*32)┃2019/07/04|Act&#45;Age&nbsp;7
+10|**61834(4)|**89891|*102933|*******|*117666┃*,117,666(*32)┃2019/07/04|Act&#8209;Age&nbsp;7
 11|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|Dr&#46;&nbsp;Stone&nbsp;11
-12|**29611(3)|**55608|**65124|*******|*******┃*,*65,124(*17)┃2019/08/02|Yuragi&#45;sou&nbsp;no&nbsp;Yuuna&#45;san&nbsp;&nbsp;&nbsp;17
+12|**29611(3)|**55608|**65124|*******|*******┃*,*65,124(*17)┃2019/08/02|Yuragi&#8209;sou&nbsp;no&nbsp;Yuuna&#8209;san&nbsp;&nbsp;&nbsp;17
 13|**25075(3)|**50952|**61532|*******|*******┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
 </span>
 <p>
@@ -97,7 +97,7 @@
 *1|*260748(5)|*******|*******|*******|*******┃*,260,748(**5)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
 *2|**70467(5)|*******|*******|*******|*******┃*,*70,467(**5)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 *3|**68740(5)|*******|*******|*******|*******┃*,*68,740(**5)┃2019/09/04|Dr&#46;&nbsp;Stone&nbsp;12
-*4|**66245(5)|*******|*******|*******|*******┃*,*66,245(**5)┃2019/09/04|Act&#45;Age&nbsp;8	
+*4|**66245(5)|*******|*******|*******|*******┃*,*66,245(**5)┃2019/09/04|Act&#8209;Age&nbsp;8	
 </span>
 <br>
 <br>
@@ -158,10 +158,10 @@
 
 <div class="bookmark">
 <h1 >Navigation</h1>
-<a href="#latest" >>> Latest Volume Data</a>
+<a href="#latest" >&gt;&gt; Latest Volume Data</a>
 <p> Ongoing series </p>
-<a href="#op" >>> One Piece</a>
-<a href="#hxh" >>> Hunter x Hunter</a>
+<a href="#op" >&gt;&gt; One Piece</a>
+<a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
 </div>
 	</div> <!-- end margin -->
     
