--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -84,7 +84,7 @@
 *9|**76366(6)|**99474|*110940|*117998|*******┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
 10|**61834(4)|**89891|*102933|*******|*117666┃*,117,666(*32)┃2019/07/04|Act&#8211;Age&nbsp;7
 11|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|Dr&#46;&nbsp;Stone&nbsp;11
-12|**29611(3)|**55608|**65124|*******|*******┃*,*65,124(*17)┃2019/08/02|Yuragi&#8211;sou&nbsp;no&nbsp;Yuuna&#8211;san&nbsp;&nbsp;&nbsp;17
+12|**29611(3)|**55608|**65124|*******|*******┃*,*65,124(*17)┃2019/08/02|Yuragi&#8211;sou&nbsp;no&nbsp;Yuuna&#8211;san&nbsp;17
 13|**25075(3)|**50952|**61532|*******|*******┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
 </span>
 <p>
