--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -102,7 +102,7 @@
 <br>
 <br>
 <br>
-<h1 id="ongoing">Ongoing series</h1>
+<h1 id="ongoing">Ongoing series (will be added periodically)</h1>
 <strong id="op">One Piece</strong>
 <p></p>
 <span>
