--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -152,6 +152,24 @@
 |*231555(0)|1386360|1604070|1710034|1776868┃2,039,350(168)┃2019/03/04|One&nbsp;Piece&nbsp;92
 |1378177(4)|1716100|1855702|1923919|1966556┃2,094,389(*67)┃2019/07/04|One&nbsp;Piece&nbsp;93
 </span>
+		  <p></p>
+<strong id="hxh">Hunter x Hunter</strong>
+<p></p>
+<span>
+|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+|******(6)|*******|*******|**30132|**50362┃*,863,240(258)┃2008/03/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;25
+|487403(3)|*688043|*757270|*790630|*811995┃*,837,714(*45)┃2008/10/03|Hunter&nbsp;x&nbsp;Hunter&nbsp;26
+|488446(3)|*******|*773616|*811139|*833116┃*,941,550(353)┃2009/12/25|Hunter&nbsp;x&nbsp;Hunter&nbsp;27
+|*61580(0)|*633082|*729872|*780936|*810581┃1,011,766(140)┃2011/07/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;28
+|693458(4)|*842801|*897139|*923961|-------┃1,043,782(109)┃2011/08/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;29
+|638907(5)|*795925|*856868|*895767|*931591┃1,090,309(229)┃2012/04/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;30
+|684299(6)|*831446|*894344|*957039|1009216┃1,193,383(349)┃2012/12/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;31
+|619064(3)|*883874|*963013|1003418|1028124┃1,186,245(325)┃2012/12/28|Hunter&nbsp;x&nbsp;Hunter&nbsp;32
+|650817(3)|*939409|1052701|1116619|1154191┃1,272,692(171)┃2016/06/03|Hunter&nbsp;x&nbsp;Hunter&nbsp;33
+|876566(7)|1034506|1104156|1144803|1168150┃1,258.337(147)┃2017/06/26|Hunter&nbsp;x&nbsp;Hunter&nbsp;34
+|477485(3)|*728167|*819134|*865164|*895639┃1,090,958(290)┃2018/02/02|Hunter&nbsp;x&nbsp;Hunter&nbsp;35
+|498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36	
+</span>		  
   </div><!-- end content -->	
 
 </div> <!-- end size & font /data-->
