--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -106,7 +106,7 @@
 <strong id="op">One Piece</strong>
 <p></p>
 <span>
-|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title<br>
 |1074745(5)|1306664|1386931|1441785|1478911┃2,117,280(705)┃2008/06/04|One&nbsp;Piece&nbsp;50
 |1029249(4)|1364053|1464295|1517953|1550694┃2,200,033(620)┃2008/09/04|One&nbsp;Piece&nbsp;51
 |1045937(4)|1320972|1422906|*******|1540949┃2,169,438(522)┃2008/12/04|One&nbsp;Piece&nbsp;52
@@ -157,6 +157,7 @@
 <p></p>
 <span>
 |Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+	
 |******(6)|*******|*******|**30132|**50362┃*,863,240(258)┃2008/03/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;25
 |487403(3)|*688043|*757270|*790630|*811995┃*,837,714(*45)┃2008/10/03|Hunter&nbsp;x&nbsp;Hunter&nbsp;26
 |488446(3)|*******|*773616|*811139|*833116┃*,941,550(353)┃2009/12/25|Hunter&nbsp;x&nbsp;Hunter&nbsp;27
