--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -159,7 +159,7 @@
 <span>
 |Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
 <br>	
-|******(6)|*******|*******|**30132|**50362┃*,863,240(258)┃2008/03/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;25
+|*******(6)|*******|*******|**30132|**50362┃*,863,240(258)┃2008/03/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;25
 |*487403(3)|*688043|*757270|*790630|*811995┃*,837,714(*45)┃2008/10/03|Hunter&nbsp;x&nbsp;Hunter&nbsp;26
 |*488446(3)|*******|*773616|*811139|*833116┃*,941,550(353)┃2009/12/25|Hunter&nbsp;x&nbsp;Hunter&nbsp;27
 |**61580(0)|*633082|*729872|*780936|*810581┃1,011,766(140)┃2011/07/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;28
