--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -65,11 +65,11 @@
 
 <div class="data">
 
-<h1 id="top">Weekly Shonen Jump Oricon Data</h1>
+<h1 id="top" style="padding-top:50px">Weekly Shonen Jump Oricon Data</h1>
 
 	  <div class="content">
       
-<strong id="latest"> Latest  Volumes Data </strong>
+<strong id="latest" style="padding-top:50px"> Latest  Volumes Data </strong>
 <p></p>
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
@@ -90,7 +90,7 @@
 <p>
 	-
 </p>
-<strong id="current"> Current Volumes Data (September 2019)</strong>
+<strong id="current" style="padding-top:50px"> Current Volumes Data (September 2019)</strong>
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
@@ -102,8 +102,8 @@
 <br>
 <br>
 <br>
-<h1 id="ongoing">Ongoing series (will be added periodically)</h1>
-<strong id="op">One Piece</strong>
+<h1 id="ongoing" style="padding-top:50px">Ongoing series (will be added periodically)</h1>
+<strong id="op" style="padding-top:50px">One Piece</strong>
 <p></p>
 <span>
 |Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
@@ -171,7 +171,10 @@
 |*876566(7)|1034506|1104156|1144803|1168150┃1,258.337(147)┃2017/06/26|Hunter&nbsp;x&nbsp;Hunter&nbsp;34
 |*477485(3)|*728167|*819134|*865164|*895639┃1,090,958(290)┃2018/02/02|Hunter&nbsp;x&nbsp;Hunter&nbsp;35
 |*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36	
-</span>		  
+</span>	
+		  
+<div style="height: 100px"></div>
+<p> More Coming soon!(ish)</p>		  
   </div><!-- end content -->	
 
 </div> <!-- end size & font /data-->
