--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -61,12 +61,12 @@
   </div> 
 </div>
 </div>	<!-- end navbar -->
-<div style="margin: 0 8px 0">	
+<div style="margin: 50 8px 0">	
 
 
 <div class="data">
 
-<h1 id="top" style="padding-top:50px">Weekly Shonen Jump Oricon Data</h1>
+<h1 id="top">Weekly Shonen Jump Oricon Data</h1>
 
 	  <div class="content">
       
