--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -214,9 +214,9 @@
 <br>|369191(7)|464621|507475|535329|------┃*,619,239(105)┃2019/02/04|Haikyuu&#33;&#33;&nbsp;36
 <br>|313860(4)|443078|492017|516488|------┃*,550,443(*46)┃2019/04/04|Haikyuu&#33;&#33;&nbsp;37
 <br>|325332(6)|------|------|------|------┃*,325,332(**6)┃2019/06/04|Haikyuu&#33;&#33;&nbsp;38
+<br>|260748(5)|------|------|------|------┃*,260,748(**5)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39	
 <br>|******(2)|------|------|------|------┃*,***,***(**2)┃2014/01/04|Haikyuu&#33;&#33;&nbsp;9&nbsp;LE&nbsp;&#43;&nbsp;Drama&nbsp;CD&nbsp;&lt;24,742
 <br>|108722(5)|------|------|------|------┃*,108,722(**5)┃2015/03/04|Haikyuu&#33;&#33;&nbsp;15&nbsp;LE&nbsp;&#43;&nbsp;OVA
-
 <br>|*23023(7)|*62773|------|------|------┃*,*62,773(**7)┃2016/05/02|Haikyuu&#33;&#33;&nbsp;21&nbsp;LE
 <br>|*20264(3)|------|------|------|------┃*,*20,264(**3)┃2017/08/04|Haikyuu&#33;&#33;&nbsp;27&nbsp;LE
 <br>|*77828(2)|121727|------|------|------┃*,121,727(**9)┃2015/10/03|Haikyuu&#33;&#33;&nbsp;Complete&nbsp;Guide
