--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -175,7 +175,7 @@
 <strong id="haikyuu" style="padding-top:50px">Haikyuu&#33;&#33;</strong>
 <p></p>
 <span>
-|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
 <br>|*31428(7)|------|------|------|------┃*,722,894(770)┃2012/06/04|Haikyuu&#33;&#33;&nbsp;1
 <br>|*46784(3)|*81413|------|------|------┃*,682,240(703)┃2012/08/03|Haikyuu&#33;&#33;&nbsp;2
 <br>|*87461(4)|123180|------|------|------┃*,617,005(620)┃2012/10/04|Haikyuu&#33;&#33;&nbsp;3
