--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -242,7 +242,7 @@
 	<p></p>
     <p>Sources: Oricon | <a href="http://comicdata.blog.fc2.com/">comicdata (formerly jump geocities )</a></p>
 	<p></p>
-    <p>Giv eme a tip for coffee to keep me sane during coding <a href="https://ko-fi.com/manganimy">ko&#8211;fi</a></p>
+    <p>Giv eme a tip so I can buy coffee to help keep me sane during coding sessions <a href="https://ko-fi.com/manganimy">ko&#8211;fi</a></p>
 	
 <p></p>
 </div>	    
