--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -55,7 +55,8 @@
       <p> Ongoing series </p>
       <a href="#op" >&gt;&gt; One Piece</a>
       <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
-      <a href="#haikyuu" >&gt;&gt; Haikyuu&#33;&#33;</a>	    
+      <a href="#haikyuu" >&gt;&gt; Haikyuu&#33;&#33;</a>
+      <a href="#mha" >&gt;&gt; My Hero Academia</a>
     </div>
     </div>
   </div> 
@@ -221,7 +222,40 @@
 <br>|*20264(3)|------|------|------|------┃*,*20,264(**3)┃2017/08/04|Haikyuu&#33;&#33;&nbsp;27&nbsp;LE
 <br>|*77828(2)|121727|------|------|------┃*,121,727(**9)┃2015/10/03|Haikyuu&#33;&#33;&nbsp;Complete&nbsp;Guide
 </span>
-		  
+		  <p></p>
+<strong id="mha" style="padding-top:50px">My Hero Academia</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD&nbsp;(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|*71575(6)|******|101801|137449|157439┃1,187,527(1388)┃2014/11/04|My&nbsp;Hero&nbsp;Academia&nbsp;1
+<br>|167905(7)|205179|224942|239566|------┃1,217,053(1414)┃2015/01/05|My&nbsp;Hero&nbsp;Academia&nbsp;2
+<br>|132801(3)|226129|254111|------|------┃1,181,627(1326)┃2015/04/03|My&nbsp;Hero&nbsp;Academia&nbsp;3
+<br>|163233(4)|230640|259137|274965|------┃1,163,222(1264)┃2015/06/04|My&nbsp;Hero&nbsp;Academia&nbsp;4
+<br>|194805(6)|255357|279414|294055|------┃1,145,487(1203)┃2015/08/04|My&nbsp;Hero&nbsp;Academia&nbsp;5
+<br>|175287(5)|238375|267182|286713|------┃1,117,878(1111)┃2015/11/04|My&nbsp;Hero&nbsp;Academia&nbsp;6
+<br>|149444(4)|223055|251675|272270|------┃1,076,738(1019)┃2016/02/04|My&nbsp;Hero&nbsp;Academia&nbsp;7
+<br>|221235(7)|277672|313251|345582|376940┃1,047,227(*959)┃2016/04/04|My&nbsp;Hero&nbsp;Academia&nbsp;8
+<br>|197805(3)|339686|390520|422690|446246┃1,020,831(*899)┃2016/06/03|My&nbsp;Hero&nbsp;Academia&nbsp;9
+<br>|208539(3)|370024|422470|456232|------┃*,999,644(*808)┃2016/09/02|My&nbsp;Hero&nbsp;Academia&nbsp;10
+<br>|203825(3)|360420|408335|435971|------┃*,979,461(*745)┃2016/11/04|My&nbsp;Hero&nbsp;Academia&nbsp;11
+<br>|183544(3)|335087|389256|420101|440536┃*,960,981(*654)┃2017/02/03|My&nbsp;Hero&nbsp;Academia&nbsp;12
+<br>|264367(6)|350385|391797|420927|449478┃*,923,225(*594)┃2017/04/04|My&nbsp;Hero&nbsp;Academia&nbsp;13
+<br>|183296(3)|353292|416205|457774|489650┃*,973,394(*717)┃2017/06/02|My&nbsp;Hero&nbsp;Academia&nbsp;14
+<br>|341780(7)|438814|490771|522623|542079┃*,942,612(*623)┃2017/09/04|My&nbsp;Hero&nbsp;Academia&nbsp;15
+<br>|274338(4)|399804|447972|479017|499904┃*,919,773(*564)┃2017/11/02|My&nbsp;Hero&nbsp;Academia&nbsp;16
+<br>|201688(3)|376234|439655|471974|497512┃*,896,137(*472)┃2018/02/02|My&nbsp;Hero&nbsp;Academia&nbsp;17
+<br>|298606(5)|421785|476620|513401|547170┃*,892,925(*411)┃2018/04/04|My&nbsp;Hero&nbsp;Academia&nbsp;18
+<br>|313511(5)|442756|507246|545075|577867┃*,850,969(*320)┃2018/07/04|My&nbsp;Hero&nbsp;Academia&nbsp;19
+<br>|365115(6)|496413|556262|587129|609409┃*,813,975(*258)┃2018/09/04|My&nbsp;Hero&nbsp;Academia&nbsp;20
+<br>|389830(6)|502271|555680|592935|624909┃*,763,647(*167)┃2018/12/04|My&nbsp;Hero&nbsp;Academia&nbsp;21
+<br>|386517(7)|497799|547062|579071|600720┃*,692,149(*105)┃2019/02/04|My&nbsp;Hero&nbsp;Academia&nbsp;22
+<br>|255103(4)|424426|485840|520925|542232┃*,568,730(**46)┃2019/05/04|My&nbsp;Hero&nbsp;Academia&nbsp;23
+<br>|201910(3)|406721|496745|538784|561135┃*,573,043(**38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
+<br>|*18656(4)|------|------|------|------┃*,*18,656(***4)┃2016/02/04|My&nbsp;Hero&nbsp;Academia&nbsp;7&nbsp;LE
+<br>|******(6)|------|------|------|------┃*,***,***(***6)┃2017/04/04|My&nbsp;Hero&nbsp;Academia&nbsp;13&nbsp;LE&nbsp;&lt;18,048
+<br>|******(3)|------|------|------|------┃*,***,***(***3)┃2017/06/02|My&nbsp;Hero&nbsp;Academia&nbsp;14&nbsp;LE&nbsp;&lt;12,243
+<br>|*34637(7)|------|------|------|------┃*,*34,637(***7)┃2016/05/02|My&nbsp;Hero&nbsp;Academia&nbsp;Official&nbsp;Character&nbsp;Book:&nbsp;Ultra&nbsp;Archive
+</span>		  
 <div style="height: 100px"></div>
 <p> More Coming soon!(ish)</p>		  
   </div><!-- end content -->	
@@ -234,7 +268,8 @@
 <p> Ongoing series </p>
 <a href="#op" >&gt;&gt; One Piece</a>
 <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
-<a href="#haikyuu" >&gt;&gt; Haikyuu&#33;&#33;</a>	
+<a href="#haikyuu" >&gt;&gt; Haikyuu&#33;&#33;</a>
+<a href="#mha" >&gt;&gt; My Hero Academia</a>
 </div>
 	</div> <!-- end margin -->
     
