--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -55,8 +55,9 @@
       <p> Ongoing series </p>
       <a href="#op" >&gt;&gt; One Piece</a>
       <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
-      <a href="#haikyuu" >&gt;&gt; Haikyuu&#33;&#33;</a>
+      <a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
       <a href="#mha" >&gt;&gt; My Hero Academia</a>
+      <a href="#mha" >&gt;&gt; Black Clover</a>
     </div>
     </div>
   </div> 
@@ -171,7 +172,7 @@
 <br>|*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
 </span>	
 		  <p></p>
-<strong id="haikyuu" style="padding-top:50px">Haikyuu&#33;&#33;</strong>
+<strong id="hq" style="padding-top:50px">Haikyuu&#33;&#33;</strong>
 <p></p>
 <span>
 |Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
@@ -255,7 +256,36 @@
 <br>|******(6)|------|------|------|------┃*,***,***(***6)┃2017/04/04|My&nbsp;Hero&nbsp;Academia&nbsp;13&nbsp;LE&nbsp;&lt;18,048
 <br>|******(3)|------|------|------|------┃*,***,***(***3)┃2017/06/02|My&nbsp;Hero&nbsp;Academia&nbsp;14&nbsp;LE&nbsp;&lt;12,243
 <br>|*34637(7)|------|------|------|------┃*,*34,637(***7)┃2016/05/02|My&nbsp;Hero&nbsp;Academia&nbsp;Official&nbsp;Character&nbsp;Book:&nbsp;Ultra&nbsp;Archive
-</span>		  
+</span>	
+		  <p></p>
+<strong id="bc" style="padding-top:50px">Black Clover</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|*38128(4)|------|------|------|------┃*,*38,128(**4)┃2015/06/04|Black&nbsp;Clover&nbsp;1
+<br>|*61918(6)|------|------|------|------┃*,*61,918(**6)┃2015/08/04|Black&nbsp;Clover&nbsp;2
+<br>|*43122(2)|*80462|------|------|------┃*,*80,462(**9)┃2015/10/03|Black&nbsp;Clover&nbsp;3
+<br>|*56951(3)|*93866|------|------|------┃*,*93,866(*10)┃2015/12/04|Black&nbsp;Clover&nbsp;4
+<br>|*60149(3)|108503|------|------|------┃*,108,503(*10)┃2016/03/04|Black&nbsp;Clover&nbsp;5
+<br>|*95799(7)|118783|------|------|------┃*,118,783(*14)┃2016/05/02|Black&nbsp;Clover&nbsp;6
+<br>|*78464(4)|121023|******|146766|------┃*,146,766(*25)┃2016/08/04|Black&nbsp;Clover&nbsp;7
+<br>|*98616(6)|129115|------|------|------┃*,129,115(*13)┃2016/10/04|Black&nbsp;Clover&nbsp;8
+<br>|*59814(3)|113151|131749|------|------┃*,260,426(353)┃2016/12/02|Black&nbsp;Clover&nbsp;9
+<br>|*66723(3)|121879|140385|------|------┃*,255,046(262)┃2017/03/03|Black&nbsp;Clover&nbsp;10
+<br>|107704(6)|136682|150383|------|------┃*,246,736(202)┃2017/05/02|Black&nbsp;Clover&nbsp;11
+<br>|*69741(3)|128256|149552|------|------┃*,233,219(108)┃2017/08/04|Black&nbsp;Clover&nbsp;12
+<br>|100937(5)|144506|165512|180954|194163┃*,194,163(*33)┃2017/10/04|Black&nbsp;Clover&nbsp;13
+<br>|140431(7)|182561|203018|222412|238929┃*,357,389(350)┃2017/12/04|Black&nbsp;Clover&nbsp;14
+<br>|102907(3)|193778|226022|------|------┃*,345,857(262)┃2018/03/02|Black&nbsp;Clover&nbsp;15
+<br>|142077(5)|201126|228376|243757|256290┃*,340,206(201)┃2018/05/02|Black&nbsp;Clover&nbsp;16
+<br>|*83957(3)|176362|214107|232004|244291┃*,296,384(108)┃2018/08/03|Black&nbsp;Clover&nbsp;17
+<br>|*87702(3)|176445|207870|******|239424┃*,239,424(*31)┃2018/11/02|Black&nbsp;Clover&nbsp;18
+<br>|102669(3)|179601|214386|231947|242906┃*,301,231(136)┃2019/01/04|Black&nbsp;Clover&nbsp;19
+<br>|117269(4)|177447|203911|******|228924┃*,228,924(*32)┃2019/04/04|Black&nbsp;Clover&nbsp;20
+<br>|******(6)|------|------|------|------┃*,**,圏外(**6)┃2017/05/02|Black&nbsp;Clover&nbsp;11&nbsp;<15,808
+<br>|*21239(5)|------|------|------|------┃*,*21,239(**5)┃2018/05/02|Black&nbsp;Clover&nbsp;16.5&nbsp;Official&nbsp;Guidebook&nbsp;Marque-page&nbsp;de&nbsp;Grimoire&nbsp;
+</span>		  		  
+		  
 <div style="height: 100px"></div>
 <p> More Coming soon!(ish)</p>		  
   </div><!-- end content -->	
@@ -268,8 +298,9 @@
 <p> Ongoing series </p>
 <a href="#op" >&gt;&gt; One Piece</a>
 <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
-<a href="#haikyuu" >&gt;&gt; Haikyuu&#33;&#33;</a>
+<a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
 <a href="#mha" >&gt;&gt; My Hero Academia</a>
+<a href="#bc" >&gt;&gt; Black Clover</a>	
 </div>
 	</div> <!-- end margin -->
     
