--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -282,7 +282,7 @@
 <br>|*87702(3)|176445|207870|******|239424┃*,239,424(*31)┃2018/11/02|Black&nbsp;Clover&nbsp;18
 <br>|102669(3)|179601|214386|231947|242906┃*,301,231(136)┃2019/01/04|Black&nbsp;Clover&nbsp;19
 <br>|117269(4)|177447|203911|******|228924┃*,228,924(*32)┃2019/04/04|Black&nbsp;Clover&nbsp;20
-<br>|******(6)|------|------|------|------┃*,**,圏外(**6)┃2017/05/02|Black&nbsp;Clover&nbsp;11&nbsp;<15,808
+<br>|******(6)|------|------|------|------┃*,***,***(**6)┃2017/05/02|Black&nbsp;Clover&nbsp;11&nbsp;<15,808
 <br>|*21239(5)|------|------|------|------┃*,*21,239(**5)┃2018/05/02|Black&nbsp;Clover&nbsp;16.5&nbsp;Official&nbsp;Guidebook&nbsp;Marque-page&nbsp;de&nbsp;Grimoire&nbsp;
 </span>		  		  
 		  
