--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -309,7 +309,7 @@
 <div class="footer">
 	<p></p>
     <p>Sources: Oricon | <a href="http://comicdata.blog.fc2.com/">comicdata (formerly jump geocities )</a></p>
-	<p></p>
+	<p>Contributors: ManganiMY | Revolution |</p>
     <p>Give me a tip so I can buy coffee to help keep me sane during coding sessions <a href="https://ko-fi.com/manganimy">| ko&#8211;fi</a></p>
 	
 <p></p>
