--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -284,7 +284,7 @@
 <br>|117269(4)|177447|203911|******|228924┃*,228,924(*32)┃2019/04/04|Black&nbsp;Clover&nbsp;20
 <br>|120146(4)|173597|195982|206343|213502┃*,224,981(*46)┃2019/07/04|Black&nbsp;Clover&nbsp;21
 <br>
-<br>|******(6)|------|------|------|------┃*,***,***(**6)┃2017/05/02|Black&nbsp;Clover&nbsp;11&nbsp;<15,808
+<br>|******(6)|------|------|------|------┃*,***,***(**6)┃2017/05/02|Black&nbsp;Clover&nbsp;11&nbsp;LE&nbsp;<15,808
 <br>|*21239(5)|------|------|------|------┃*,*21,239(**5)┃2018/05/02|Black&nbsp;Clover&nbsp;16.5&nbsp;Official&nbsp;Guidebook&nbsp;Marque-page&nbsp;de&nbsp;Grimoire&nbsp;
 </span>		  		  
 		  
