--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -57,7 +57,7 @@
       <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
       <a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
       <a href="#mha" >&gt;&gt; My Hero Academia</a>
-      <a href="#mha" >&gt;&gt; Black Clover</a>
+      <a href="#bc" >&gt;&gt; Black Clover</a>
     </div>
     </div>
   </div> 
