--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -58,6 +58,14 @@
       <a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
       <a href="#mha" >&gt;&gt; My Hero Academia</a>
       <a href="#bc" >&gt;&gt; Black Clover</a>
+      <a href="#yuuna" >&gt;&gt; Yuuna and the Haunted Hotspring</a>
+      <a href="#kny" >&gt;&gt; Kimetsu no Yaiba</a>
+      <a href="#tpn" >&gt;&gt; The Promised Neverland</a>
+      <a href="#wnl" >&gt;&gt; We Never Learn</a>
+      <a href="#ds" >&gt;&gt; Dr&#46;Stone</a>
+      <a href="#aa" >&gt;&gt; Act-Age</a>
+      <a href="#jjk" >&gt;&gt; Jujutsu Kaisen</a>
+      <a href="#csm" >&gt;&gt; Chainsaw Man</a>
     </div>
     </div>
   </div> 
@@ -86,8 +94,8 @@
 <br>*8|**98500(4)|*136161|*152250|*162156|*169575┃*,181,712(*46)┃2019/07/04|Jujutsu&nbsp;Kaisen&nbsp;6
 <br>*9|**76366(6)|**99474|*110940|*117998|-------┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
 <br>10|**61834(4)|**89891|*102933|*******|*117666┃*,117,666(*32)┃2019/07/04|Act&#8211;Age&nbsp;7
-<br>11|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|Dr&#46;&nbsp;Stone&nbsp;11
-<br>12|**29611(3)|**55608|**65124|-------|-------┃*,*65,124(*17)┃2019/08/02|Yuragi&#8211;sou&nbsp;no&nbsp;Yuuna&#8211;san&nbsp;17
+<br>11|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|Dr&#46;Stone&nbsp;11
+<br>12|**29611(3)|**55608|**65124|-------|-------┃*,*65,124(*17)┃2019/08/02|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;17
 <br>13|**25075(3)|**50952|**61532|-------|-------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
 </span>
 <p>
@@ -99,7 +107,7 @@
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
 <br>*1|*260748(5)|-------|-------|-------|-------┃*,260,748(**5)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
 <br>*2|**70467(5)|-------|-------|-------|-------┃*,*70,467(**5)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
-<br>*3|**68740(5)|-------|-------|-------|-------┃*,*68,740(**5)┃2019/09/04|Dr&#46;&nbsp;Stone&nbsp;12
+<br>*3|**68740(5)|-------|-------|-------|-------┃*,*68,740(**5)┃2019/09/04|Dr&#46;Stone&nbsp;12
 <br>*4|**66245(5)|-------|-------|-------|-------┃*,*66,245(**5)┃2019/09/04|Act&#8211;Age&nbsp;8		
 </span>
 
@@ -284,10 +292,158 @@
 <br>|117269(4)|177447|203911|******|228924┃*,228,924(*32)┃2019/04/04|Black&nbsp;Clover&nbsp;20
 <br>|120146(4)|173597|195982|206343|213502┃*,224,981(*46)┃2019/07/04|Black&nbsp;Clover&nbsp;21
 <br>
-<br>|******(6)|------|------|------|------┃*,***,***(**6)┃2017/05/02|Black&nbsp;Clover&nbsp;11&nbsp;LE&nbsp;<15,808
+<br>|******(6)|------|------|------|------┃*,***,***(**6)┃2017/05/02|Black&nbsp;Clover&nbsp;11&nbsp;LE&nbsp;&lt;15,808
 <br>|*21239(5)|------|------|------|------┃*,*21,239(**5)┃2018/05/02|Black&nbsp;Clover&nbsp;16.5&nbsp;Official&nbsp;Guidebook&nbsp;Marque-page&nbsp;de&nbsp;Grimoire&nbsp;
 </span>		  		  
-		  
+		  <p></p>
+<strong id="yuuna" style="padding-top:50px">Yuragi-sou no Yuuna-san</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|*29743(3)|******|******|*51357|*70324┃*,*70,324(*31)┃2016/06/03|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;1
+<br>|*64527(4)|*91526|------|------|------┃*,*91,526(*11)┃2016/08/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;2
+<br>|*84885(6)|106619|------|------|------┃*,106,619(*13)┃2016/10/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;3
+<br>|*57655(3)|*99551|------|------|------┃*,*99,551(*10)┃2016/12/02|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;4
+<br>|*89207(6)|110861|------|------|------┃*,110,861(*13)┃2017/04/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;5
+<br>|*77399(6)|*99344|------|------|------┃*,*99,344(*13)┃2017/07/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;6
+<br>|*82764(7)|100775|------|------|------┃*,100,775(*14)┃2017/09/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;7
+<br>|*64523(4)|*92184|------|------|------┃*,*92,184(*11)┃2017/11/02|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;8
+<br>|*61845(4)|*89797|******|******|112240┃*,112,240(*32)┃2018/01/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;9
+<br>|*63130(5)|*87068|------|------|------┃*,*87,068(*12)┃2018/04/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;10
+<br>|*56441(5)|*78721|------|------|------┃*,*78,721(*12)┃2018/07/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;11
+<br>|*43997(4)|*70037|------|------|------┃*,*70,037(*11)┃2018/10/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;12
+<br>|*53159(6)|*67888|------|------|------┃*,*67,888(*13)┃2018/12/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;13
+<br>|*62058(7)|------|------|------|------┃*,*62,058(**7)┃2019/02/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;14&nbsp;
+<br>|*48865(4)|*70437|------|------|------┃*,*70,437(*11)┃2019/04/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;15&nbsp;
+<br>|*54166(6)|------|------|------|------┃*,*54,166(**6)┃2019/06/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;16
+<br>|*29611(3)|*55608|*65124|------|------┃*,*65,124(*17)┃2019/08/02|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;17
+<br>
+<br>|******(5)|------|------|------|------┃*,***,***(**5)┃2018/07/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;11&nbsp;LE&nbsp;&lt;14,736
+<br>|******(4)|------|------|------|------┃*,***,***(**4)┃2018/10/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;12&nbsp;LE&nbsp;&lt;11,701
+<br>|******(6)|------|------|------|------┃*,***,***(**6)┃2018/12/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;13&nbsp;LE&nbsp;&lt;17,070
+</span>		
+		  <p></p>
+<strong id="kny" style="padding-top:50px">Kimetsu no Yaiba</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|******(3)|------|------|------|------┃*,563,713(1193)┃2016/06/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;1&lt;16,966
+<br>|*16323(4)|------|------|------|------┃*,540,472(1131)┃2016/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;2
+<br>|*25967(6)|------|------|------|------┃*,529,863(1070)┃2016/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;3
+<br>|*21815(3)|------|------|------|------┃*,521,744(1011)┃2016/12/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;4
+<br>|*41476(3)|*65822|------|------|------┃*,522,599(*920)┃2017/03/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;5
+<br>|*65937(6)|*84742|------|------|------┃*,525,038(*860)┃2017/05/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;6
+<br>|*57083(3)|*96527|------|------|------┃*,506,755(*766)┃2017/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;7
+<br>|*81312(5)|109936|122681|------|------┃*,503,503(*705)┃2017/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;8
+<br>|*89077(7)|110729|******|130267|------┃*,494,207(*644)┃2017/12/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;9
+<br>|*65861(3)|118511|133976|------|------┃*,492,382(*556)┃2018/03/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;10
+<br>|113325(7)|135313|******|153976|------┃*,493,773(*462)┃2018/06/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;11
+<br>|*64061(3)|118990|138412|------|------┃*,486,125(*402)┃2018/08/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;12
+<br>|*74425(3)|129051|146318|------|------┃*,481,006(*311)┃2018/11/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;13
+<br>|*78819(3)|126981|145143|******|160110┃*,466,847(*248)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
+<br>|107041(4)|159717|183206|198458|214609┃*,472,585(*158)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
+<br>|225102(4)|302423|337978|357346|384400┃*,471,605(**67)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>|*51963(4)|******|******|******|119215┃*,207,533(**66)┃2019/07/05|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Coprse&nbsp;Records
+
+</span>	
+		  <p></p>
+<strong id="tpn" style="padding-top:50px">The Promised Neverland</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|*24380(3)|*49785|------|------|------┃*,990,370(899)┃2016/12/02|The&nbsp;Promised&nbsp;Neverland&nbsp;1
+<br>|*40683(3)|*78409|------|------|------┃*,947,144(836)┃2017/02/03|The&nbsp;Promised&nbsp;Neverland&nbsp;2
+<br>|*94969(6)|122494|------|------|------┃*,896,657(776)┃2017/04/04|The&nbsp;Promised&nbsp;Neverland&nbsp;3
+<br>|134300(6)|182819|209882|******|240991┃*,864,317(685)┃2017/07/04|The&nbsp;Promised&nbsp;Neverland&nbsp;4
+<br>|171002(7)|218239|244039|------|------┃*,843,295(623)┃2017/09/04|The&nbsp;Promised&nbsp;Neverland&nbsp;5
+<br>|144360(4)|211988|237386|******|265742┃*,808,291(564)┃2017/11/02|The&nbsp;Promised&nbsp;Neverland&nbsp;6
+<br>|164072(4)|254251|293407|317459|335240┃*,787,933(501)┃2018/01/04|The&nbsp;Promised&nbsp;Neverland&nbsp;7
+<br>|213667(5)|301291|337517|360571|381428┃*,780,746(411)┃2018/04/04|The&nbsp;Promised&nbsp;Neverland&nbsp;8
+<br>|250681(7)|317301|347212|369149|385313┃*,743,364(350)┃2018/06/04|The&nbsp;Promised&nbsp;Neverland&nbsp;9
+<br>|147422(3)|300193|361978|393749|413678┃*,738,255(290)┃2018/08/03|The&nbsp;Promised&nbsp;Neverland&nbsp;10
+<br>|161909(3)|303921|355775|387498|405006┃*,713,902(199)┃2018/11/02|The&nbsp;Promised&nbsp;Neverland&nbsp;11
+<br>|180160(3)|327390|404387|453243|488270┃*,697,567(136)┃2019/01/04|The&nbsp;Promised&nbsp;Neverland&nbsp;12
+<br>|273123(7)|368157|421216|453332|473978┃*,529,687(*77)┃2019/03/04|The&nbsp;Promised&nbsp;Neverland&nbsp;13
+<br>|375151(6)|------|------|------|------┃*,679,519(*76)┃2019/06/04|The&nbsp;Promised&nbsp;Neverland&nbsp;14
+<br>|190803(3)|399399|497864|544803|570463┃*,585,845(*38)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
+<br>|*62333(7)|*73501|******|*89326|------┃*,114,139(*77)┃2019/03/04|The&nbsp;Promised&nbsp;Neverland&nbsp;13&nbsp;LE
+</span>	
+		  <p></p>
+<strong id="wnl" style="padding-top:50px">We Never Learn</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|*16014(3)|------|------|------|------┃*,*16,014(**3)┃2017/06/02|We&nbsp;Never&nbsp;Learn&nbsp;1
+<br>|*30080(3)|*49112|------|------|------┃*,*49,112(*10)┃2017/08/04|We&nbsp;Never&nbsp;Learn&nbsp;2
+<br>|*44541(5)|*58987|------|------|------┃*,*58,987(*12)┃2017/10/04|We&nbsp;Never&nbsp;Learn&nbsp;3
+<br>|*59052(7)|------|------|------|------┃*,*59,052(**7)┃2017/12/04|We&nbsp;Never&nbsp;Learn&nbsp;4
+<br>|*41915(3)|*72145|------|------|------┃*,*72,145(*10)┃2018/02/02|We&nbsp;Never&nbsp;Learn&nbsp;5
+<br>|*64900(5)|*87249|------|------|------┃*,*87,249(*12)┃2018/05/02|We&nbsp;Never&nbsp;Learn&nbsp;6
+<br>|*64762(5)|*88669|------|------|------┃*,*88,669(*12)┃2018/07/04|We&nbsp;Never&nbsp;Learn&nbsp;7
+<br>|*69026(6)|*91202|101589|107768|------┃*,107,768(*27)┃2018/09/04|We&nbsp;Never&nbsp;Learn&nbsp;8
+<br>|*72305(6)|*91637|******|108155|------┃*,108,155(*27)┃2018/12/04|We&nbsp;Never&nbsp;Learn&nbsp;9
+<br>|*74913(7)|*93561|******|106921|------┃*,106,921(*28)┃2019/02/04|We&nbsp;Never&nbsp;Learn&nbsp;10
+<br>|*63097(4)|*91845|104444|------|------┃*,104,444(*18)┃2019/04/04|We&nbsp;Never&nbsp;Learn&nbsp;11
+<br>|*76366(6)|*99474|110940|117998|------┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
+<br>|*70467(5)|------|------|------|------┃*,*70,467(**5)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
+</span>	
+		  <p></p>
+<strong id="ds" style="padding-top:50px">Dr. Stone</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|*36075(6)|------|------|------|------┃*,*36,075(**6)┃2017/07/04|Dr&#46;Stone&nbsp;1
+<br>|*50370(7)|------|------|------|------┃*,*50,370(**7)┃2017/09/04|Dr&#46;Stone&nbsp;2
+<br>|*48507(7)|------|------|------|------┃*,*48,507(**7)┃2017/12/04|Dr&#46;Stone&nbsp;3
+<br>|*36418(3)|*66013|------|------|------┃*,*66,013(*10)┃2018/02/02|Dr&#46;Stone&nbsp;4
+<br>|*52117(5)|*71288|------|------|------┃*,*71,288(*12)┃2018/04/04|Dr&#46;Stone&nbsp;5
+<br>|*56071(5)|*76893|------|------|------┃*,*76,893(*12)┃2018/07/04|Dr&#46;Stone&nbsp;6
+<br>|*58651(6)|*78427|------|------|------┃*,*78,427(*13)┃2018/09/04|Dr&#46;Stone&nbsp;7
+<br>|*59929(6)|*76599|------|------|------┃*,*76,599(*13)┃2018/12/04|Dr&#46;Stone&nbsp;8
+<br>|*60550(7)|*77121|******|*91300|------┃*,*91,300(*28)┃2019/02/04|Dr&#46;Stone&nbsp;9
+<br>|*49856(4)|*73893|------|------|------┃*,*73,893(*11)┃2019/04/04|Dr&#46;Stone&nbsp;10
+<br>|*56414(4)|*81274|*92654|******|106828┃*,106,828(*32)┃2019/07/04|Dr&#46;Stone&nbsp;11
+<br>|*68740(5)|------|------|------|------┃*,*68,740(**5)┃2019/09/04|Dr&#46;Stone&nbsp;12
+</span>	
+		  <p></p>
+<strong id="aa" style="padding-top:50px">Act-Age</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|*11622(5)|------|------|------|------┃*,*11,622(**5)┃2018/05/02|Act&#8211;Age&nbsp;1
+<br>|*15540(5)|------|------|------|------┃*,*15,540(**5)┃2018/07/04|Act&#8211;Age&nbsp;2
+<br>|*11730(3)|------|------|------|------┃*,*11,730(**3)┃2018/08/03|Act&#8211;Age&nbsp;3
+<br>|*20739(3)|*38893|------|------|------┃*,*38,893(*10)┃2018/11/02|Act&#8211;Age&nbsp;4
+<br>|*52319(7)|*68191|******|*82040|------┃*,*82,040(*28)┃2019/02/04|Act&#8211;Age&nbsp;5
+<br>|*54353(4)|*80820|*92715|101233|------┃*,101,233(*25)┃2019/05/02|Act&#8211;Age&nbsp;6
+<br>|*61834(4)|*89891|102933|******|117666┃*,117,666(*32)┃2019/07/04|Act&#8211;Age&nbsp;7
+<br>|*66245(5)|------|------|------|------┃*,*66,245(**5)┃2019/09/04|Act&#8211;Age&nbsp;8
+</span>	
+		 <p></p>
+<strong id="jjk" style="padding-top:50px">Jujutsu Kaisen</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|*28581(5)|------|------|------|------┃*,248,711(320)┃2018/07/04|Jujutsu&nbsp;Kaisen&nbsp;1
+<br>|*51908(6)|*69047|------|------|------┃*,228,799(258)┃2018/09/04|Jujutsu&nbsp;Kaisen&nbsp;2
+<br>|*83100(6)|102143|------|------|------┃*,209,250(167)┃2018/12/04|Jujutsu&nbsp;Kaisen&nbsp;3
+<br>|*99031(7)|121839|135646|******|154227┃*,154,227(*35)┃2019/03/04|Jujutsu&nbsp;Kaisen&nbsp;4
+<br>|*83006(4)|123986|141388|******|160129┃*,160,129(*32)┃2019/05/02|Jujutsu&nbsp;Kaisen&nbsp;5
+<br>|*98500(4)|136161|152250|162156|169575┃*,181,712(*46)┃2019/07/04|Jujutsu&nbsp;Kaisen&nbsp;6
+<br>
+<br>|*70774(6)|------|------|------|------┃*,177,868(167)┃2018/12/04|Jujutsu&nbsp;Kaisen&nbsp;0&nbsp;Tokyo&nbsp;Metropolitan&nbsp;Magic&nbsp;Technical&nbsp;School
+</span>	
+		  <p></p>
+<strong id="csm" style="padding-top:50px">Chainsaw Man</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|*25518(7)|------|------|------|------┃*,*25,518(**7)┃2019/03/04|Chainsaw&nbsp;Man&nbsp;1
+<br>|*26382(4)|*39870|------|------|------┃*,*39,870(*11)┃2019/05/02|Chainsaw&nbsp;Man&nbsp;2
+<br>|*25075(3)|*50952|*61532|------|------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
+
+</span>	
+		 
 <div style="height: 100px"></div>
 <p> More Coming soon!(ish)</p>		  
   </div><!-- end content -->	
@@ -302,7 +458,15 @@
 <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
 <a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
 <a href="#mha" >&gt;&gt; My Hero Academia</a>
-<a href="#bc" >&gt;&gt; Black Clover</a>	
+<a href="#bc" >&gt;&gt; Black Clover</a>
+<a href="#yuuna" >&gt;&gt; Yuuna and the Haunted Hotspring</a>
+<a href="#kny" >&gt;&gt; Kimetsu no Yaiba</a>
+<a href="#tpn" >&gt;&gt; The Promised Neverland</a>
+<a href="#wnl" >&gt;&gt; We Never Learn</a>
+<a href="#ds" >&gt;&gt; Dr&#46;Stone</a>
+<a href="#aa" >&gt;&gt; Act-Age</a>
+<a href="#jjk" >&gt;&gt; Jujutsu Kaisen</a>
+<a href="#csm" >&gt;&gt; Chainsaw Man</a>
 </div>
 	</div> <!-- end margin -->
     
