--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -52,7 +52,7 @@
 	    </button>
     <div class="dropdown-content"id="myDropdown3" >
       <a href="#latest" >&gt;&gt; Latest Volume Data</a>
-      <p> Ongoing series </p>
+      <p style="background:none"> Ongoing series </p>
       <a href="#op" >&gt;&gt; One Piece</a>
       <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
       <a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
