--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -343,7 +343,7 @@
 <br>|*78819(3)|126981|145143|******|160110┃*,493,201(*255)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
 <br>|107041(4)|159717|183206|198458|214609┃*,499,523(*165)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
 <br>|225102(4)|302423|337978|357346|384400┃*,511,424(**74)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
-<br>|*51963(4)|******|******|******|119215┃*,222,175(**74)┃2019/07/05|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Corp&nbsp;Records
+<br>|*51963(4)|******|******|******|119215┃*,222,175(**74)┃2019/07/05|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Corps&nbsp;Records
 
 </span>	
 		  <p></p>
