--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -109,6 +109,11 @@
 <br>*2|**70467(5)|**93975|-------|-------|-------┃*,*93,975(*12)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 <br>*3|**68740(5)|**93266|-------|-------|-------┃*,*93,266(*12)┃2019/09/04|Dr&#46;Stone&nbsp;12
 <br>*4|**66245(5)|**92650|-------|-------|-------┃*,*92,650(*12)┃2019/09/04|Act&#8211;Age&nbsp;8		
+
+
+[Not Ranked]
+Yui Kamio Lets Loose , Double Taisei, Beast Children, Tokyo Shinobi Squad
+
 </span>
 
 <h1 id="ongoing" style="padding-top:30px">Ongoing series (will be added periodically)</h1>
